style.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: #f6fac0;
    font-family: "Press Start 2P", sans-serif;
}

h1 {
    text-align: center;
    margin-top: 30px;
    padding: 10px;
}

#container {
    width: 600px;
    height: 600px;
    border: 8px solid black;
    border-radius: 10px;
    margin: 0 auto;
}

